fixed CORS issues that used to happen when running the application in docker